...

class FeedServiceMock: FeedServiceType {
    var feedResponse: Result<Feed?, Error>?
    private var mockData: [NearEarthObject] = {
        return [NearEarthObject(links: nil,
                                id: "123",
                                name: "TestObject1",
                                neoReferenceId: nil,
                                nasaJplUrl: nil,
                                absoluteMagnitudeH: nil,
                                estimatedDiameter: nil,
                                isPotentiallyHazardousAsteroid: nil,
                                isSentryObject: nil,
...
